<resources>
    <string name="app_name">MedHelpMobile</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="input_lastname">Фамилия</string>
    <string name="medhelp">Medhelp</string>
    <string name="input_phone">Телефон</string>
    <string name="input_policy">Номер полиса</string>
    <string name="signIn">Войти</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="username">Имя пользоватея</string>
    <string name="password">Пароль</string>
    <string name="logout">Выйти</string>

    <string name="logout_warning_list">
        <ul>
            <li>Не сможете пройти предварительную подготовку к приёму оналйн</li>
            <li>Не будете получать актуальную информацию о приёмах</li>
            <li>Потеряете возможность получать уведомления о ближайших приёмах</li>
        </ul>
    </string>
</resources>