<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="45dp"
    tools:context=".activities.LoginActivity">

    <TextView style="@style/PageHeader"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginVertical="20dp"
        android:text="@string/medhelp" />

    <EditText style="@style/FormEditText"
        android:id="@+id/lastnameEt"
        android:inputType="textPersonName"
        android:hint="@string/input_lastname"/>

    <EditText style="@style/FormEditText"
        android:id="@+id/policyNumberEt"
        android:inputType="numberDecimal"
        android:hint="@string/input_policy"/>


    <EditText style="@style/FormEditText"
        android:id="@+id/usernameEt"
        android:inputType="textPersonName"
        android:hint="@string/username"/>

    <EditText style="@style/FormEditText"
        android:id="@+id/passwordEt"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button style="@style/PrimaryButton"
        android:id="@+id/signUnBtn"
        android:text="@string/signUp"/>

    <View style="@style/Divider"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Уже есть аккаунт?"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/darkgrey"/>

        <Button style="@style/SecondaryButton"
            android:id="@+id/signInBtn"
            android:letterSpacing="0.0"
            android:text="@string/signIn"/>

    </LinearLayout>
</LinearLayout>